--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,39 +1,20 @@
-name: CI
+name: Dump OIDC to logs
+permissions:
+  id-token: 'write'
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
   workflow_dispatch:
-
 jobs:
-  build:
-    permissions:
-      id-token: write
-      packages: write
-      contents: read
-    env:
-      COSIGN_EXPERIMENTAL: "true"
+  test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Log into ghcr.io
-        uses: docker/login-action@v1
+      - run: |
+          curl --no-progress-meter -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > jwt
+          cat jwt
+      - uses: actions/upload-artifact@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - name: Install Cosign
-        uses: sigstore/cosign-installer@main
-      - name: Build and Push container images
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64
-          push: true
-          tags: |
-            ghcr.io/luketestorg/cosign-oidc:${{ github.sha }}
-      - name: Sign image
-        run: |
-          cosign sign ghcr.io/luketestorg/cosign-oidc:${{ github.sha }}
+          name: artifact
+          path: jwt
